# pacbot-rl

./: .gitignore  pyproject.toml
.github/workflows/: train.yml
pacbot_rs/: Cargo.toml  pacbot_rs.pyi  pyproject.toml
pacbot_rs/src/: alphazero.rs  candle_inference.rs  env.rs  lib.rs  mcts.rs
src/: ppo_experience_buffer.py  replay_buffer.py  utils.py
src/algorithms/: train_alphazero.py  train_dqn.py  train_ppo.py
src/checkpoints/: q_net-latest.pt  q_net-latest.safetensors
